--- a/design/css/design.css
+++ b/design/css/design.css
@@ -87,7 +87,9 @@ body {
     
     position: relative;
     display: inline-block;
-    width: 200px;
+    min-width: 250px;
+    width: 10%;
+    max-width: 500px;
     height: 300px;
     margin-left: 30px;
     margin-right: 30px;
