--- a/design/css/design.css
+++ b/design/css/design.css
@@ -87,9 +87,8 @@ body {
     
     position: relative;
     display: inline-block;
-    min-width: 250px;
-    width: 10%;
-    max-width: 500px;
+    vertical-align: top; 
+    width: 225px;
     height: 300px;
     margin-left: 30px;
     margin-right: 30px;
