Front-End and Back-End development.
*Added front-end for orders table.
*Added back-end for orders table.
*Some fixes to Database class.
*Removed some deprecated code from repository.
*Some copyright desing changes.

--- a/design/css/design.css
+++ b/design/css/design.css
@@ -273,3 +273,13 @@ form h4 {
     }
 
 }
+
+/* Misc */
+
+#orders-container {
+
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+
+    min-height: 20vh;
+}
